# sharet-backend-dev-experiments-2

./: .gitignore  Procfile  alembic.ini  main.py  pyproject.toml  requirements.txt
alembic/versions/: 89b678e2a59c_added_account_table.py
app/: utils.py
app/crud/: __init__.py  base.py  crud_resource.py  crud_user.py
app/db/: base.py  session.py
app/models/: reservation.py  resource.py  user.py
app/schemas/: __init__.py  resource.py  user.py
