[tool.poetry]
name = "sharet"
version = "0.1.0"
description = "Backend part of ShareT application"
authors = ["ai18 <antonio.ionta.18@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.74.1"
uvicorn = "^0.17.5"
pydantic = "^1.9.0"
gunicorn = "^20.1.0"
fastapi-cloudauth = "^0.4.3"
SQLAlchemy = "^1.4.32"
sqlalchemy-orm = "^1.2.2"
pg8000 = "^1.24.1"
psycopg2 = "^2.9.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
